--- a/Tesis/metodologia.tex
+++ b/Tesis/metodologia.tex
@@ -2,7 +2,10 @@
 
 El objetivo de este trabajo era poner a prueba las hipótesis de que un videojuego educativo puede enseñar algoritmos relacionados a grafos, y que puede mantener a los estudiantes motivados y enfocados en la tarea que se les pide realizar. 
 
-La forma de comprobar tales hipótesis es mediante un experimento donde se le pide a personas voluntarias responder ciertas preguntas después de probar la aplicación.
+La forma de comprobar tales hipótesis es mediante un experimento donde se le pide a personas voluntarias responder ciertas preguntas después de probar la aplicación. Esta se considera una metodología simple según \cite{HowGamesComputingEducationEvaluated} y no es la ideal, pues, para este tipo de estudios, el caso ideal es una metodología pre/post/post con un tamaño muestral de 40 individuos o superior. Sin embargo, este tipo de estudios requieren más tiempo por parte de los vol untarios, mayores incentivos a la participación y apoyo institucional. Un ejemplo de esto último corresponde al caso en que la participación sea una actividad pedagógica en un curso y exigir que esta sea obligatoria.
+
+Se sugieren buenas prácticas metodológicas en \cite{Rogers2002InteractionDB, MeegaPlusManual, HowGamesComputingEducationEvaluated}, donde se define un conjunto de ideas primarias, comprendiendo cuáles son las dificultades a resolver. Posteriormente, hacer validaciones con tamaños muestrales significativos y representativos del usuario a quien está destinado el trabajo, además de tratar de apoyarse con tecnologías como eye-tracking y telemetría. Sin embargo, se hizo complejo obtener voluntarios para participar en las pruebas, sobretodo considerando que aquellas personas que participaran en una prueba después no podrían formar parte de las pruebas finales, que se consideraban más relevantes.
+
 
 \section{Fases del trabajo de investigación}
 
@@ -10,12 +13,11 @@ El trabajo se dividió en tres fases, las cuales constaron de distintas pregunta
 
 \subsection{Fase exploratoria}
 
-En esta primera fase, el objetivo era recopilar retroalimentación y opiniones de usuarios de manera abierta, utilizando metodologías de pensamiento en voz alta con personas experimentadas en grafos. Se optó por esta metodología por las siguientes razones: 1) Si un usuario conoce el algoritmo y la estructura de datos pero no comprende el videojuego, entonces existen problemas de usabilidad, justificando comenzar con personas expertas. 2) Los usuarios expertos tienden a expresarse de manera más natural cuando saben que no se espera un formulario al final, lo que permite obtener opiniones más espontáneas en el momento, por lo que se prefirió no utilizar una encuesta o escala posterior a la experiencia.
+En esta primera fase, el objetivo era recopilar retroalimentación y opiniones de usuarios de manera abierta, utilizando metodologías de pensamiento en voz alta con personas experimentadas en grafos. Se optó por esta metodología por dos razones. En primer lugar, si un usuario conoce el algoritmo y la estructura de datos pero no comprende el videojuego, entonces existen problemas de usabilidad, justificando comenzar con personas expertas.
 
-Es crucial que los usuarios expresen sus impresiones a medida que los elementos del videojuego aparecen en pantalla y no después de la experiencia, para comprender mejor lo que sienten al usar la aplicación por primera vez. Hay animaciones que deben captar la atención en el momento, como la pista visual del ratón indicando al usuario que haga clic izquierdo en un planeta.
+En segundo lugar, los usuarios expertos tienden a expresarse de manera más natural cuando pueden emitir opiniones en el momento, por lo que se prefirió no utilizar una encuesta o escala posterior a la experiencia. Resulta crucial que los expertos expresen sus impresiones a medida que los elementos del videojuego aparecen en pantalla y no después de la experiencia, para comprender mejor lo que sienten al usar la aplicación por primera vez. Hay animaciones que deben captar la atención en el momento, como la pista visual del ratón indicando al usuario que haga clic izquierdo en un planeta.
 
-Se dio por concluida esta fase una vez que los resultados de las pruebas de usuario mejoraron y se observó que cinco usuarios expertos pudieron completar la prueba de principio a fin sin inconvenientes. La condición era que estos usuarios no hubieran tenido conocimiento previo del juego.
-
+Se dio por concluida esta fase una vez que los resultados de las pruebas de usuario mejoraron y se observó que cinco usuarios expertos pudieron completar la prueba de principio a fin sin inconvenientes ni pedir ayuda. Estas cinco personas debían cumplir la condición de no tener conocimiento previo sobre el juego.
 
 \subsection{Fase de evaluación académica y percepción de usuario}
 
@@ -32,5 +34,4 @@ La medición del rendimiento académico se lleva a cabo mediante una prueba escr
 
 % Anotar aquí antes de que termine la tesis cuánta gente fue en total.
 
-Con el objetivo de ampliar el estudio y aumentar el tamaño de la muestra, se llevó a cabo una tercera experiencia abierta al público en general con conocimientos en programación. Se emitió una invitación en diversas comunidades de videojuegos para probar el juego educativo y completar el formulario. Dado que las experiencias podían variar significativamente, se incorporó una pregunta sobre el nivel de experiencia en programación para permitir la segmentación. El formulario utilizado también se basó en el modelo MEEGA+, pero las respuestas recolectadas se almacenaron en una base de datos separada del grupo anterior.
-
+Con el objetivo de ampliar el estudio y aumentar el tamaño de la muestra, se llevó a cabo una tercera experiencia abierta al público en general con conocimientos en programación. Se emitió una invitación en diversas comunidades de videojuegos para probar el juego educativo y completar el formulario. Dado que las experiencias podían variar significativamente, se incorporó una pregunta sobre el nivel de experiencia en programación para permitir la segmentación. El formulario utilizado también se basó en el modelo MEEGA+, pero las respuestas recolectadas se almacenaron en una base de datos separada del grupo anterior. Aquí se mostraron dos versiones, una en español y otra en inglés para aumentar el tamaño de la muestra. En total, 13 personas participaron de esta experiencia.
