--- a/Tesis/trabajo_relacionado.tex
+++ b/Tesis/trabajo_relacionado.tex
@@ -13,6 +13,9 @@ Bell y Gibson \cite{evaluation_of_games_for_teaching_cs} identificaron y clasifi
 
 Kiili y su equipo \cite{using_videogames_maths} analizaron el uso de videojuegos en enseñanza y evaluación en matemáticas a través de los títulos ``Semideus'' y "Wuzzit Trouble". A través de estos, llegaron a la conclusión de que es posible utilizar videojuegos para enseñar y evaluar al mismo tiempo. Además, caracterizaron estadísticamente las diferencias producidas por el uso de videojuegos entre resultados de un pre test y un post test.
 
+% En otro trabajo de Kiili et. al \cite{Kiili_game_based_rational} realizaron una regresión lineal entre dos variables, puntaje obtenido en el videojuego y mejoras en una prueba académica relacionada con la materia enseñada. En este caso se enseñaba sobre fracciones y números racionales. En este caso, el tiempo dedicado por los grupos de estudio, fue un total de 2 horas y media. % TODO: revisar mejor la relación entre las variables.
+
+
 En el trabajo de Zhao y Shute \cite{video_game_foster_computational_thinking}, se enlistan ejemplos de videojuegos diseñados para enseñar programación, como Wu's Castle \cite{wuscastle}, CodeCombat \cite{CodeCombat}, CodeSpell \cite{codespells}, y MiniColon \cite{minicolon}. Estos ejemplos emplean programación con texto. No obstante, también existen numerosos referentes que utilizan programación por bloques, como LightBot \cite{LightBot}, Scratch \cite{ scratch, maloney2010scratch}, y RoboBuilder \cite{RoboBuilder}, los cuales simplifican el proceso de aprender una sintaxis relacionada con los lenguajes de programación.
 
 A pesar de esto, el impacto de estos videojuegos no ha sido evaluado en muchos casos. En las instancias documentadas, las muestras suelen ser reducidas, y las evaluaciones se centran principalmente en aspectos cualitativos \cite{video_game_foster_computational_thinking, effectiveness_gbl}.
