Include changes mentioned by Prof.: Software architecture Research Questions Hypothesis

--- a/Tesis/bibliografia.bib
+++ b/Tesis/bibliografia.bib
@@ -362,13 +362,6 @@ DOI = {10.3390/educsci9040276}
   publisher={Springer}
 }
 
-@inproceedings{Rogers2002InteractionDB,
-  title={Interaction Design: Beyond Human-Computer Interaction},
-  author={Yvonne Rogers and Helen Sharp and Jennifer Preece},
-  year={2002},
-  url={https://api.semanticscholar.org/CorpusID:61037268}
-}
-
 @article{volunterBias,
   title={Volunteer Effects on Experimental Outcomes},
   author={Ralph L. Rosnow and Robert Rosenthal and Roberta M. Mcconochie and Robert L. Arms},
@@ -420,7 +413,7 @@ DOI = {10.3390/educsci9040276}
   note = {Accessed: 2023-11-15}
 }
 
-@online{vscode,
+@misc{vscode,
   title = {Visual Studio Code},
   url = {https://en.wikipedia.org/wiki/Visual_Studio_Code},
   author = {Microsoft},
@@ -628,13 +621,3 @@ note = {Accessed: 2023-11-18}
   url={https://api.semanticscholar.org/CorpusID:265320832}
 }
 
-@article{Kiili_game_based_rational,
-  title = {Evaluating the effectiveness of a game-based rational number training - In-game metrics as learning indicators},
-  author = {Kristian Kiili and Korbinian Moeller and Manuel Ninaus},
-  journal = {Computers & Education},
-  volume = {120},
-  pages = {13-28},
-  year = {2018},
-  doi = {https://doi.org/10.1016/j.compedu.2018.01.012},
-  url = {https://www.sciencedirect.com/science/article/pii/S0360131518300125}
-}
