--- a/Tesis/metodologia.tex
+++ b/Tesis/metodologia.tex
@@ -4,7 +4,7 @@ El objetivo de este trabajo era poner a prueba las hipótesis de que un videojue
 
 La forma de comprobar tales hipótesis es mediante un experimento donde se le pide a personas voluntarias responder ciertas preguntas después de probar la aplicación. Esta se considera una metodología simple según \cite{HowGamesComputingEducationEvaluated} y no es la ideal, pues, para este tipo de estudios, el caso ideal es una metodología pre/post/post con un tamaño muestral de 40 individuos o superior. Sin embargo, este tipo de estudios requieren más tiempo por parte de los vol untarios, mayores incentivos a la participación y apoyo institucional. Un ejemplo de esto último corresponde al caso en que la participación sea una actividad pedagógica en un curso y exigir que esta sea obligatoria.
 
-Se sugieren buenas prácticas metodológicas en \cite{Rogers2002InteractionDB, MeegaPlusManual, HowGamesComputingEducationEvaluated}, donde se define un conjunto de ideas primarias, comprendiendo cuáles son las dificultades a resolver. Posteriormente, hacer validaciones con tamaños muestrales significativos y representativos del usuario a quien está destinado el trabajo, además de tratar de apoyarse con tecnologías como eye-tracking y telemetría. Sin embargo, se hizo complejo obtener voluntarios para participar en las pruebas, sobretodo considerando que aquellas personas que participaran en una prueba después no podrían formar parte de las pruebas finales, que se consideraban más relevantes.
+Se sugieren buenas prácticas metodológicas en \cite{Rogers2002InteractionDesign, MeegaPlusManual, HowGamesComputingEducationEvaluated}, donde se define un conjunto de ideas primarias, comprendiendo cuáles son las dificultades a resolver. Posteriormente, hacer validaciones con tamaños muestrales significativos y representativos del usuario a quien está destinado el trabajo, además de tratar de apoyarse con tecnologías como eye-tracking y telemetría. Sin embargo, se hizo complejo obtener voluntarios para participar en las pruebas, sobretodo considerando que aquellas personas que participaran en una prueba después no podrían formar parte de las pruebas finales, que se consideraban más relevantes.
 
 
 \section{Fases del trabajo de investigación}
