--- a/Tesis/resultados.tex
+++ b/Tesis/resultados.tex
@@ -43,4 +43,4 @@ En el anexo \hyperref[AnexoF]{Anexo F} se muestran los comentarios abiertos que 
 
 Esta encuesta sigue libre al momento de la escritura de esta tesis. Hasta ahora, se han recolectado 11 respuestas. El resultado de la percepción con la metodología \cite{meegaplus} es un  $\theta = 0.616$. Los resultados se encuentran en los anexos de forma análoga a las respuestas posteriores. Se observa un valor $\theta$ más alto que en el caso anterior. Además, los comentarios abiertos muestran una actitud de mayor aceptación con respecto al grupo que se expuso a la prueba académica. Esto se puede deber al sesgo del voluntario \cite{volunterBias}, puesto que la comunidad que participó de este trabajo es una comunidad indie de creación de videojuegos, por lo que aprecian cada aspecto de los videojuegos y reconocen la dificutad de realizarlos.
 
-En el anexo \hyperref[AnexoF]{Anexo F} se muestran los comentarios abiertos que se exigen en la metodología MEEGA+ \cite{meegaplus}. Las respuestas están separadas con respecto al grupo anterior. 
+Nuevamente, en el anexo \hyperref[AnexoF]{Anexo F} se muestran los comentarios abiertos que se exigen en la metodología MEEGA+ \cite{meegaplus}. Las respuestas están separadas con respecto al grupo anterior. 
