--- a/Tesis/conclu.tex
+++ b/Tesis/conclu.tex
@@ -2,10 +2,12 @@
 
 El videojuego logra su objetivo de enseñar los algoritmos de BFS y DFS, como evidencian los resultados obtenidos por estudiantes de informática de la Universidad de Chile. Estos estudiantes demostraron comprender los algoritmos, así como la naturaleza de los grafos, al responder de manera acertada a una prueba asociada al juego.
 
-%%% TODO: VERIFICAR %%%
-Por otra parte, el juego ha recibido una evaluación positiva y se considera, según el modelo MEEGA+ \cite{meegaplus}, como un juego de calidad. A pesar de las mejoras identificadas durante el proceso, el juego ha sido bien recibido por los estudiantes, y su percepción positiva puede influir beneficiosamente en la motivación y, por ende, en los resultados académicos. 
+Por otra parte, el juego ha recibido una evaluación positiva y se considera, según el modelo MEEGA+ \cite{meegaplus}, como un juego de calidad. A pesar de las mejoras identificadas durante el proceso, el juego ha sido bien recibido por los estudiantes, y su percepción positiva puede influir beneficiosamente en la motivación y, por ende, en los resultados académicos.
 
-Este trabajo sienta bases para futuras investigaciones, especialmente en relación con el diseño de videojuegos educativos y su impacto en la educación en informática. La metodología utilizada aquí puede ser perfeccionada en trabajos futuros para evaluar mejor la comprensión de los conceptos enseñados mediante este enfoque lúdico. Se recomienda emplear una metodología de estudio pre/post/post como se indica en \cite{HowGamesComputingEducationEvaluated}. 
+Las hipótesis son verdaderas. La primera hipótesis indicaba que un videojuego que esneña sobre grafos puede enseñar a los estudiantes sobre los algoritmos BFS y DFS. La segunda hipótesis,
+\emph{H2}: Un videojuego que enseñe grafos será percibido de manera positiva por los estudiantes que todavía no aprenden sobre esos contenidos, también es correcta, medida a través del valor $\theta$ entregado por el modelo MEEGA+.
+
+Este trabajo sienta bases para futuras investigaciones, especialmente en relación con el diseño de videojuegos educativos y su impacto en la educación en informática. La metodología utilizada aquí puede ser perfeccionada en trabajos futuros para evaluar mejor la comprensión de los conceptos enseñados mediante este enfoque lúdico. Para casos futuros, se recomienda emplear una metodología de estudio pre/post/post como se indica en \cite{HowGamesComputingEducationEvaluated}.
 
 
 % Énfasis en Resultados Positivos: Resalta de manera más específica los resultados positivos obtenidos, como el hecho de que los estudiantes lograron comprender los algoritmos y la estructura de los grafos, así como aprobar la prueba asociada. Esto ayuda a consolidar la efectividad del videojuego como herramienta educativa.
