--- a/Tesis/diseno_y_requisitos.tex
+++ b/Tesis/diseno_y_requisitos.tex
@@ -13,17 +13,17 @@ En ambos casos la interfaz de código se encuentra a la derecha. Además, estos 
 
 De este análisis se desprende que el juego tiene por requisito mostrar la ejecución del código instrucción por instrucción.
 
-\section{Objetivo del diseño deseado}
+\section{Objetivos a nivel de diseño}
 
 En este apartado se justifican las decisiones de diseño que llevaron a las mecánicas de juego, cuáles son los elementos interactivos y la ubicación y responsividad de estos. Según Rogers en su libro sobre diseño interactivo \cite{Rogers2002InteractionDesign}, es relevante entender primero cuál es el problema que busca resolverse, qué usuarios se ven afectados por esto, qué características poseen y cómo podría solucionarse en base a prototipos.
 
-Se parte del supuesto de que, en muchas ocasiones, los estudiantes creen entender cómo funciona cierto código o algoritmo, pero no lo aplican paso a paso con papel y lápiz o en su imaginación propia. Cuando se les asigna como ejercicio realizar el procedimiento siguiendo cada instrucción rigurosamente, los estudiantes no lo llevan a cabo o lo hacen de forma incorrecta sin darse cuenta. Por ejemplo, en \cite{IdentifyingStudentDifficultiesDataStructures}, se menciona que los estudiantes a menudo creen entender los contenidos, pero tienen conceptos erróneos sin percatarse.
+Se parte del supuesto de que, en muchas ocasiones, los estudiantes creen entender cómo funciona cierto código o algoritmo, pero no lo aplican paso a paso con papel y lápiz. Cuando se les asigna como ejercicio realizar el procedimiento siguiendo cada instrucción rigurosamente, los estudiantes no lo llevan a cabo o lo hacen de forma incorrecta sin darse cuenta. Por ejemplo, en \cite{IdentifyingStudentDifficultiesDataStructures}, se menciona que los estudiantes a menudo creen entender los contenidos, pero tienen conceptos erróneos sin percatarse.
 
 En el trabajo de Zingaro et al. \cite{IdentifyingStudentDifficultiesDataStructures}, se mencionan algunos ejemplos de malentendidos por parte de los estudiantes, como errores al comprender los heaps y las formas en que pueden representarse o construirse. Estos malentendidos pasan desapercibidos y no son detectables por los mismos estudiantes.
 
 Adicionalmente a la revisión de textos, se revisaron canales de YouTube educativos como 3Blue1Brown \cite{3Blue1BrownYT}, donde el propietario del canal, Grant Sanderson, habla repetidamente sobre cómo las visualizaciones ayudan a comprender la abstracción matemática subyacente.
 
-Un requisito esencial es que el videojuego logrado debe evitar la mecanización por parte del estudiante, obligándolo a revisar exhaustivamente cada paso relacionado con el algoritmo, evitando dar por sentado que se entiende el código y saltar a la siguiente actividad.
+Un requisito esencial es que el videojuego creado debe evitar la mecanización por parte del estudiante, obligándolo a revisar exhaustivamente cada paso relacionado con el algoritmo, evitando dar por sentado que se entiende el código y saltar a la siguiente actividad.
 
 Por otra parte, para enseñar conceptos relacionados con programación, lo ideal es buscar usuarios que entiendan cómo funciona, pero que no tengan mucha experiencia y que no visualicen un código al nivel de entender cómo funciona instrucción por instrucción. Por lo mismo, se propone basarse en un modelo similar a los debuggers, donde se puede ver el estado de las variables en cada paso, así como la instrucción por ejecutarse y el resultado que conlleva.
 
@@ -161,7 +161,7 @@ Se crearon 4 niveles para el juego, incluyendo los algoritmos de Kruskal y Prim.
 
 Para diseñar el videojuego, primero se determinaron problemas que se querían solucionar. En particular, el autor hipotetiza que los estudiantes de computación tienen dificultades para comprender completamente los algoritmos que se enseñan en los cursos de programación, y que no siempre son conscientes de esta falta de comprensión. Por lo tanto, se busca que este videojuego sea una herramienta que permita a los estudiantes entender los algoritmos paso a paso, guiándolos sutilmente a lo largo del proceso de aprendizaje.
 
-En la Universidad de Chile, históricamente y al momento de realizar este trabajo, para entrar a computación se requiere aprobar anteriormente dos años de cursos de plan común, donde existe una práctica conocida como ``pauteo'', la cual consiste en estudiar y revisar pautas de pruebas de semestres anteriores con el fin de prepararse para los exámenes. Con esta práctica, el alumnado revisa las ecuaciones o procedimientos para responder una pregunta sin haber realizado los ejercicios o repetido el procedimiento paso por paso. Muchas veces revisan un algoritmo superficialmente, o lo reproducen mentalmente sin hacerlo en papel. Por lo mismo, se busca que el videojuego sea una herramienta que permita a los estudiantes entender los algoritmos paso a paso y acompañarlo con una visualización.
+En la Universidad de Chile, históricamente y al momento de realizar este trabajo, para entrar a computación se requiere aprobar anteriormente dos años de cursos de plan común, donde existe una práctica conocida como ``pauteo'', la cual consiste en estudiar y revisar pautas de pruebas de semestres pasados para preparase para los exámenes. Con esta práctica, el alumnado revisa las ecuaciones o procedimientos para responder una pregunta sin haber realizado los ejercicios o repetido el procedimiento paso por paso. Muchas veces revisan un algoritmo superficialmente, o lo reproducen mentalmente sin hacerlo en papel. Por lo mismo, se busca que el videojuego sea una herramienta que permita a los estudiantes entender los algoritmos paso a paso y acompañarlo con una visualización.
 
 La idea principal es forzar al usuario a reproducir el algoritmo paso a paso. Esto se puede observar al utilizar el debugger. El debugger permite ver el estado de las variables en cada paso, y permite avanzar paso a paso en el código. El videojuego busca ser una herramienta que permita al usuario reproducir el algoritmo paso a paso, pero de una manera más lúdica. Por esto, el debugger que se utiliza en Visual Studio Code se utilizó como modelo.
 
@@ -173,7 +173,7 @@ Una vez definido cierto nivel de avance con todos los algoritmos definidos, se p
 
 Los diseñadores, en entrevistas separadas coincidieron en la necesidad de introducir tutoriales que mostraran los elementos del juego uno a uno, por lo que se decidió agregar tutoriales. Además, se decidió agregar una historia de fondo para lograr que el jugador se sienta identificado con el juego y comprenda un uso inmediato de estos algoritmos y estructuras. Por otra parte, los diseñadores enfatizaron la necesidad de agregar una componente de premiación y gamificación para despertar la motivación de los usuarios.
 
-Una vez finalizados los tutoriales, junto con la incorporación de los estilos, música y elementos narrativos, se procedió a publicar \href{https://alasaltum.itch.io/IGACSE}{el videojuego en la plataforma de itch.io}, un servidor de venta de videojuegos y elementos relacionados de creadores con bajos recursos o del mundo indie. El estilo se compró en itch.io a través de la \href{https://azagaya.itch.io/sci-fi-theme}{tienda de assets}. Los sonidos también se descargaron desde la misma tienda.
+Una vez finalizados los tutoriales, junto con la incorporación de los estilos, música y elementos narrativos, se procedió a publicar \href{https://alasaltum.itch.io/igasce}{el videojuego en la plataforma de itch.io}, un servidor de venta de videojuegos y elementos relacionados de creadores con bajos recursos o del mundo indie. El estilo se compró en itch.io a través de la \href{https://azagaya.itch.io/sci-fi-theme}{tienda de assets}. Los sonidos también se descargaron desde la misma tienda.
 
 % Agregar fotos de distintas versiones del juego
 % TODO: podríamos mostrar el proceso de diseño, con las distintas evoluciones.
@@ -189,7 +189,7 @@ La interfaz de usuario está basada principalmente en el debugger de Visual Stud
 	\label{VScodeDebugger}
 \end{figure}
 
-Hay otros juegos cuya interfaz sirvió de inspiración para la realización del juego final, como 7 Billion Humans\cite{7billionhumans}, donde el código se ve a la derecha de la pantalla. La porción que contiene los elementos y eventos del juego está al lado izquierdo. Lo que ocurre en la interfaz de la derecha afecta al mundo virtual, tal como en la aplicación IGACSE.
+Hay otros juegos cuya interfaz sirvió de inspiración para la realización del juego final, como 7 Billion Humans\cite{7billionhumans}, donde el código se ve a la derecha de la pantalla. La porción que contiene los elementos y eventos del juego está al lado izquierdo. Lo que ocurre en la interfaz de la derecha afecta al mundo virtual, tal como en la aplicación IGASCE.
 
 \begin{figure}[h]
 	\centering
@@ -199,7 +199,7 @@ Hay otros juegos cuya interfaz sirvió de inspiración para la realización del 
 \end{figure}
 
 
-Otro videojuego con una interfaz similar es CodeCombat \cite{CodeCombat}. Aquí el código también está a la derecha, mientras que abajo se ven diálogos y elementos seleccionables. En el caso de IGACSE, los diálogos también se muestran abajo, así como las variables actuales y la seleccionada.
+Otro videojuego con una interfaz similar es CodeCombat \cite{CodeCombat}. Aquí el código también está a la derecha, mientras que abajo se ven diálogos y elementos seleccionables. En el caso de IGASCE, los diálogos también se muestran abajo, así como las variables actuales y la seleccionada.
 Además, el menú del juego se accede en la esquina superior izquierda (Ver figura \ref{CodeCombat}).
 
 \begin{figure}[h]
@@ -214,14 +214,14 @@ Además, el menú del juego se accede en la esquina superior izquierda (Ver figu
 
 Los juegos retro comúnmente emplean bucles de música de 8 a 16 bits. Ejemplos notables incluyen Golden Sun \cite{Wiki_Golden_Sun}, ProtoCorgi \cite{ProtoCorgi}, Pokemon Emerald \cite{PokemonEmerald}, Space Invaders \cite{SpaceInvaders}, y Final Fantasy IV \cite{FinalFantasyIV}.
 
-En juegos como Pokemon \cite{PokemonEmerald} y Golden Sun \cite{Wiki_Golden_Sun}, cada vez que se hace click en algún botón y se gatilla un evento, se emite un sonido de confirmación, como cuando el jugador selecciona un ataque. El objetivo es confirmarle al usuario que se está ejecutando correctamente una acción. IGACSE sigue una estrategia similar, utilizando sonidos agudos de confirmación al hacer clic en planetas, caminos o al presionar teclas correctamente (espacio o R). Estos sonidos nítidos cumplen la función de validar la ejecución exitosa de una acción sin distraer al jugador.
+En juegos como Pokemon \cite{PokemonEmerald} y Golden Sun \cite{Wiki_Golden_Sun}, cada vez que se hace click en algún botón y se gatilla un evento, se emite un sonido de confirmación, como cuando el jugador selecciona un ataque. El objetivo es confirmarle al usuario que se está ejecutando correctamente una acción. IGASCE sigue una estrategia similar, utilizando sonidos agudos de confirmación al hacer clic en planetas, caminos o al presionar teclas correctamente (espacio o R). Estos sonidos nítidos cumplen la función de validar la ejecución exitosa de una acción sin distraer al jugador.
 
-En contraste, los sonidos de error en IGACSE emplean tonos graves con desvanecimiento, generando una sensación de vibración (ver figura \ref{EspectroOndasSonidoError}). Estos sonidos más intensos se activan cuando el jugador comete errores, como hacer clic en un planeta incorrecto o un camino equivocado, presionar una tecla antes de completar una instrucción, o responder incorrectamente a preguntas del tipo Sí/No. La intención es que el jugador reconozca inmediatamente los errores y tome medidas correctivas.
+En contraste, los sonidos de error en IGASCE emplean tonos graves con desvanecimiento, generando una sensación de vibración (ver figura \ref{EspectroOndasSonidoError}). Estos sonidos más intensos se activan cuando el jugador comete errores, como hacer clic en un planeta incorrecto o un camino equivocado, presionar una tecla antes de completar una instrucción, o responder incorrectamente a preguntas del tipo Sí/No. La intención es que el jugador reconozca inmediatamente los errores y tome medidas correctivas.
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.9\textwidth]{imagenes/EspectroOndasConfirmacion.png}
-	\caption{Espectro de Ondas del sonido de Confirmación de IGACSE}
+	\caption{Espectro de Ondas del sonido de Confirmación de IGASCE}
 	\label{EspectroOndasSonidoConfirmacion}
 \end{figure}
 
@@ -229,7 +229,7 @@ En contraste, los sonidos de error en IGACSE emplean tonos graves con desvanecim
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.9\textwidth]{imagenes/EspectroOndasError.png}
-	\caption{Espectro de Ondas del sonido de Error de IGACSE}
+	\caption{Espectro de Ondas del sonido de Error de IGASCE}
 	\label{EspectroOndasSonidoError}
 \end{figure}
 
@@ -266,7 +266,7 @@ Otra ventaja clave de Godot es la capacidad de utilizar variables exportadas. Es
 
 En comparación, trabajar a un nivel más bajo con bibliotecas como PyGame, que emplea OpenGL, requiere abordar individualmente cada aspecto de la representación de un objeto. Por ejemplo, mover un personaje implica gestionar texturas y colisiones por separado en el código, aumentando costos y complejidad de desarrollo \cite{GodotCollisionsAndRendering}.
 
-\subsection{Arquitectura de software de la aplicación IGACSE}
+\subsection{Arquitectura de software de la aplicación IGASCE}
 
 La aplicación se desarrolla en diferentes fases, las cuales abarcan tres tipos de escenas: menús, tutoriales y niveles jugables. Cada fase hace uso de módulos distintos, y cada nivel, menú o tutorial representa una escena.
 
@@ -275,7 +275,7 @@ Los menús se construyen principalmente mediante nodos de control, comúnmente u
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=0.9\textwidth]{imagenes/GodotInterfaceMainMenu.png}
-	\caption{Interfaz de Godot describiendo la escena del menú principal de IGACSE. El juego públicamente se dio a conocer como CosmoGraphica, pero el proyecto completo se llama IGACSE.}
+	\caption{Interfaz de Godot describiendo la escena del menú principal de IGASCE. El juego públicamente se dio a conocer como CosmoGraphica, pero el proyecto completo se llama IGASCE.}
 	\label{GodotMenuInterface}
 \end{figure}
 
@@ -292,11 +292,11 @@ Los tutoriales presentan una lógica más compleja y se asemejan a los niveles. 
 
 En cuanto a los niveles jugables, hay varios elementos destacables, como el código, las variables, la variable seleccionada y la ventana de juego.
 
-El código que se muestra a la derecha de la pantalla durante el juego está controlado por un nodo de la clase CodeContainer. Este objeto se encarga de recibir la entrada del jugador para avanzar en el código. Si las acciones ejecutadas son correctas, el usuario pasa a la siguiente instrucción, desbloqueando nuevas tareas. La clase CodeContainer posee un arreglo de objetos del tipo CodeLine llamado code\_lines. La clase CodeLine contiene toda la lógica de una única línea de código. Entre sus funciones se encuentran dar énfasis a la línea de código actual, proporcionar feedback al usuario cuando la instrucción de la línea se completa correctamente y verificar constantemente si la instrucción de línea se ha completado correctamente (ver figura \ref{CodeLinesArchitecture}).
+El código que se muestra a la derecha de la pantalla durante el juego está controlado por un nodo de la clase CodeContainer. Este objeto se encarga de recibir la entrada del jugador para avanzar en el código. Si las acciones ejecutadas son correctas, el usuario pasa a la siguiente instrucción, desbloqueando nuevas tareas. La clase CodeContainer posee un arreglo de objetos del tipo CodeLine llamado code\_lines. La clase CodeLine contiene toda la lógica de una única línea de código. Entre sus funciones se encuentran dar énfasis visual a la línea de código actual, proporcionar feedback audiovisual al usuario cuando la instrucción de la línea se completa correctamente y verificar constantemente si la instrucción de línea se ha completado correctamente (ver figura \ref{CodeLinesArchitecture}).
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.9\textwidth]{imagenes/CodeLinesArchitecture.png}
+	\includegraphics[width=0.9\textwidth]{imagenes/code_lines_architecture.png}
 	\caption{Arquitectura de software encargada de la mecánica de ejecución de código dentro del juego.}
 	\label{CodeLinesArchitecture}
 \end{figure}
@@ -316,8 +316,7 @@ La clase ADTShower se encarga de mostrar en la esquina inferior derecha la varia
 
 Inicialmente, cada cambio en el código debido al efecto de alguna CodeLine o línea de código del juego requería modificar las clases DebugBlock, ADTShower y StoredData (explicada más adelante), además de afectar la misma línea de código. Además, estos efectos deben reflejarse en las líneas de código siguientes para lograr cohesión. Por ejemplo, si la quinta línea crea la variable ``u'' y la sexta la modifica, esto se refleja correctamente en todas las estructuras mencionadas.
 
-Para resolver el problema del alto costo de implementación, se optó por crear una clase llamada ADTMediator, siguiendo el patrón Mediator \cite{Freeman2015TheMP}. Esta clase se inspiró en la arquitectura de React, donde el código generado por React funciona como una única fuente de verdad o "Single Source of Truth" \cite{ReactSingleSourceOfTruth}. Con este tipo de arquitectura, se envía un mensaje a ADTMediator solicitando modificar, crear o eliminar una variable. Esta clase ajusta sus variables internas, luego informa a las clases DebugBlock y ADTShower sobre qué mostrar. Una desventaja de esta arquitectura es que realiza copias innecesarias en cada paso, perdiendo eficiencia. Sin embargo, dado que se trabaja con pocas variables, este costo no es notable a nivel de usuario.
-
+Para resolver el problema del alto costo de implementación, se optó por crear una clase llamada ADTMediator, siguiendo el patrón Mediator \cite{Freeman2015TheMP}. Esta clase se inspiró en la arquitectura de React, donde el código generado por React funciona como una única fuente de verdad o "Single Source of Truth" \cite{ReactSingleSourceOfTruth}. Con este tipo de arquitectura, se envía un mensaje a ADTMediator solicitando modificar, crear o eliminar una variable. Esta clase ajusta sus variables internas, luego informa a las clases DebugBlock y ADTShower sobre qué mostrar. Una desventaja de esta arquitectura es que realiza copias innecesarias en cada paso, perdiendo eficiencia. Sin embargo, dado que se trabaja con menos de seis variables, este costo es despreciable a nivel de usuario.
 
 \begin{figure}[h!]
 	\centering
@@ -329,3 +328,146 @@ Para resolver el problema del alto costo de implementación, se optó por crear 
 Una clase que sirve de puente para comunicarse con el ADTMediator es StoredData. Este es un singleton que contiene datos como los avances del usuario en los distintos niveles y el estado del juego. Cuando una línea de código quiere modificar variables dentro del juego, ejecuta un método de este singleton, el cual reenvía esta información al ADTMediator. Esto se hace así porque es fácil obtener el puntero a StoredData, ya que usa el patrón singleton.
 
 Otros singletons son: AudioPlayer, encargado de emitir sonidos específicos en cualquier momento del juego y NotificationManager, que genera ventanas emergentes para el usuario, como menúes, avisos o pestañas donde se debe responder sí o no.
+
+\subsection{Cómo agregar una nueva CodeLine y ajustarse a otro algoritmo}
+
+El framework creado en IGACSE permite que se puedan crear líneas nuevas de código en menos de diez pasos. Con estas líneas se puede recrear un algoritmo perfectamente. En este capítulo se entrega un ejemplo y muestras de código. En primer lugar, se debe crear el script que ejecuta una línea de código en el programa, para esto, se debe crear un nuevo archivo GDScript que herede de la clase EffectCheck como se muestra en la figura \ref{effect_check_script}.
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=0.9\textwidth]{imagenes/effect_check_script.png}
+	\caption{Script de la clase abstracta EffectCheck.}
+	\label{effect_check_script}
+\end{figure}
+
+
+Los métodos de esta clase que pueden ser redefinidos según cada caso. Estos se pueden ver en la tabla \ref{table_effect_check_methods}. 
+
+\newgeometry{margin=0.5in}
+
+\begin{table}[h]
+    \centering
+    \begin{tabular}{|l|p{0.6\textwidth}|}
+        \hline
+        \textbf{Método} & \textbf{Acción} \\
+        \hline
+        effect\_check\_on\_focused & Cuando el puntero de instrucciones alcanza esta línea de código, ejecuta un efecto. Por ejemplo, esto puede servir para permitir que un nodo sea seleccionable.\\
+        \hline
+        check\_actions\_correct & Verificación constante. Retorna verdadero si el usuario ha completado las acciones relacionadas con esta línea de código.  \\
+        \hline
+        \_trigger\_on\_correct\_once & Efecto ejecutado cuando la instrucción se ha completado correctamente. Por ejemplo, al presionar un planeta correctamente, queremos que se vea una nave espacial volando hacia un planeta. \\
+        \hline
+		\_show\_hint\_to\_user & Qué hacer cuando el usuario tarda cierto tiempo en ejecutar correctamente las acciones requeridas por la instrucción, como mostrar un ratón haciendo click en un planeta. Cumple el objetivo de ayudar al jugador a avanzar. \\
+        \hline
+        \_trigger\_on\_next\_line\_side\_effect & Efecto ejecutado cuando se llega a la siguiente línea. De manera predeterminada, es apagar el timer para entregar un hint.\\
+        \hline
+        reset & Ejecutado cuando toca la siguiente instrucción después de pasar de la instrucción actual. Utilizado en ciclos y condicionales para asegurarse de que cuando se vuelvan a repetir tales instrucciones, la ejecución funcione como se espera.  \\
+        \hline
+        get\_next\_line & Va a la línea que sigue después de la instrucción descrita. \\
+        \hline
+        get\_jump\_line & La línea siguiente en caso de un salto en la instrucción descrita. Utilizada en condicionales y ciclos. \\
+        \hline
+    \end{tabular}
+    \caption{Descripción de los métodos que pueden ser redefinidos por las implementaciones de la clase abstracta EffectCheck.}
+    \label{table_effect_check_methods}
+\end{table}
+
+\restoregeometry
+
+A modo de ejemplo, en la figura \ref{v_is_not_explored_effect_check} se muestra la instrucción \emph{If v.is\_not\_explored()} usada en el algoritmo DFS. Esta instrucción se asegura de que no se explore dos veces el mismo nodo. Se le pregunta al usuario si se ha explorado el nodo v. Una vez el usuario ha contestado correctamente, se le permite avanzar.
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=0.9\textwidth]{imagenes/v_is_not_explored_effect_check_1.png}
+	\caption{Script de la instrucción \emph{If v.is\_not\_explored()}.}
+	\label{v_is_not_explored_effect_check}
+\end{figure}
+
+
+% Mostrar el código, los métodos que se les hace override.
+% Indicar que esto es GDScript. Que algunas cosas son señales y que otros
+% scripts pueden leer estas señales. Que con estas señales se pueden gatillar
+% Eventos del juego. Mostrar ejemplos donde se selecciona un nodo, como el nodo_u.
+
+Para hacer una nueva línea perteneciente a un algoritmo, se debe crear un nuevo objeto que herede de CodeLine. Luego, se deben redefinir los métodos de esta clase según el comportamiento esperado. 
+
+Por ejemplo, en el caso de \emph{If v.is\_not\_explored()}, es esperable que al usuario se le pregunte si el nodo v está explorado una vez que se alcanza esta parte del código (Ver función effect\_check\_on\_focused en la figura \ref{v_is_not_explored_effect_check}). La instrucción se finaliza cuando el usuario responde correctamente si el nodo v ha sido explorado o no (Líneas 5 a 7 en la figura \ref{v_is_not_explored_effect_check}).
+
+Respecto a implementar una nueva línea de código a nivel de usuario, el proceso es como se indica en la figura \ref{Godot_v_is_not_explored}. 
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=1.2\textwidth]{imagenes/DFS_if_v_is_not_explored.png}
+	\caption{Ventana de Godot mostrando un nodo que contiene la instrucción \emph{If v.is\_not\_explored()}.}
+	\label{Godot_v_is_not_explored}
+\end{figure}
+
+Se debe tener un CodeBlock como raíz de un árbol jerárquico. Este CodeBlock debe contener un nodo del tipo VBoxContainer que se encarga de alinear los elementos de forma vertical. En este VBoxContainer, llamado LinesContainer en el presente caso. El LinesContainer tiene como hijos PanelContainers que son, en realidad, CodeLines.
+
+Cada CodeLine tiene ciertas variables exportadas, como se observa en el lado derecho de la figura \ref{Godot_v_is_not_explored}. Estas variables se pueden ver en la tabla \ref{table_code_line_variables}
+
+\begin{table}[!h]
+    \centering
+    \begin{tabular}{|l|p{0.8\textwidth}|}
+        \hline
+        \textbf{Variable} & \textbf{Efecto} \\
+        \hline
+        line\_index & Número de línea que representa la CodeLine. Sirve para indicar la siguiente línea, o a cuál línea saltar. \\
+        \hline
+        jump\_index  & Línea a la cual saltar en caso de que corresponda un salto. Utilizada en casos de condicionales y bucles. \\
+        \hline
+        focused & Su valor es verdadero cuando la línea de código está seleccionada. \\
+        \hline
+		code\_text & El texto del código que se muestra en pantalla. \\
+        \hline
+        effect\_check & Una referencia al script que hereda de EffectCheck y que determina la lógica de lo que hace la línea de código. \\
+        \hline
+        hint\_text  & El texto que se le mostrará al usuario si se demora en realizar alguna acción y está atascado. \\
+        \hline
+        time\_until\_show\_hint & Tiempo que transcurre desde que el puntero de instrucciones apunta a la instrucción y que se muestra el hint. \\
+        \hline
+    \end{tabular}
+    \caption{Descripción de las variables exportadas de la clase CodeLine.}
+    \label{table_code_line_variables}
+\end{table}
+
+
+Cada efecto desencadena modificaciones en las estructuras de datos del nivel. Por ejemplo, al crearse la variable \emph{v} al recorrer un grafo, StoredData guarda una referencia a esta nueva variable, el ADTMediator es notificado y reenvía esta señal a las clases DebugBlock y ADTShower, para que puedan desplegar este objeto como un elemento visible en el juego.
+
+
+
+\subsection{Arquitectura de software de un nivel de IGACSE}
+
+% Contar que por sobre todo están los singletons y el GraphManager que se encarga de inicializar el grafo y el nivel.
+% El GraphManager tiene una refernecia al ADT Mediator y al StoryBeforeLevel, que se encarga de mostrar la historia y dar una introducción a la teoría del nivel. Además, referencias a las popups.
+% Dentro de la pantalla o Screen, están: DebugBlock, ADTShower y NodeContainer.
+% Dentro del NodeContainer aparece cada nodo y las uniones de los arcos entre ellos.
+
+Un nivel en IGACSE está compuesto por varios nodos de Godot. Los nodos más relevantes y específicos para esta aplicación se detallan en la figura \ref{diagram_dfs_level}, que muestra un ejemplo del nivel utilizando el algoritmo DFS.
+
+\newgeometry{margin=0.5in}
+
+\begin{figure}[!h]
+	\centering
+	\includegraphics[scale=.7]{imagenes/level_scene_DFS.png}
+	\caption{Diagrama simplificado de clases e interacciones del nivel DFS. Algunas clases y objetos no están agregados por motivos de simplicidad.}
+	\label{diagram_dfs_level}
+\end{figure}
+
+\restoregeometry
+
+En este caso, los singletons son aquellas clases que se mantienen durante todo el juego. AudioPlayer administra los sonidos y música de fondo del videojuego. NotificationManager muestra las popups que se cierran y abren durante el juego, relacionadas con menúes y preguntas del tipo if.
+
+En cuanto al singleton StoredData, este almacena información sobre los niveles jugados, las acciones realizadas por el jugador, el estado de avance y las variables en juego actualmente. Además, esta clase proporciona una librería de funciones relacionadas con la manipulación de variables durante el nivel, como funciones para obtener los datos relacionados a una variable a partir de un nombre en forma de texto.
+
+La clase GraphManager inicializa el grafo y proporciona las referencias de nodos y arcos a StoredData. También indica a StoryBeforeLevel que debe mostrar un diálogo específico antes de comenzar el nivel jugable.
+
+Posteriormente, se inicializan el ADTMediator, DebugBlock y ADTShower, cuyos roles ya fueron explicados anteriormente. En conjunto con estos objetos, el CodeContainer aparece en el nivel, construyendo cada línea de código con sus respectivos scripts.
+
+El jugador introduce inputs constantemente, lo que le permite avanzar a lo largo de las líneas de código hasta completarlas todas. Una vez finalizado el algoritmo, StoredData se encarga de realizar la transición al siguiente nivel.
+
+
+
+
+
+
